--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@ h1 {
     font-size: 24px;
     line-height: 150%;
 }
+a {
+    color: #141522;
+}
 /* ------------------------------------------------------------------------------------ */
 ._wrapper {
     display: flex;
@@ -31,10 +34,8 @@ h1 {
     background-color: #fff;
 }
 .taskbar-left-container {
-    min-height: 100%;
-}
-.taskbar-left-wrapper {
     position: relative;
+    height: 100%;
 }
 .logo {
 }
@@ -61,11 +62,12 @@ h1 {
     margin-left: 12px;
 }
 .question {
-    width: 100%;
-    bottom: 0;
+    
 }
 .quiestion-icon {
+    position: relative;
     display: block;
+    z-index: 2;
     margin: 0 auto;
     transform: translateY(49px);
 }
@@ -78,7 +80,6 @@ h1 {
     padding-top: 71px;
     padding-bottom: 16px;
 }
-.question-body 
 .question-title {
     line-height: 150%;
     text-align: center;
