--- a/css/style.css
+++ b/css/style.css
@@ -380,23 +380,69 @@ a {
     width: 100%;
     max-width: 436px;
 }
-._container {
-}
 .task-bar-right-container {
 }
 .calendare {
+    background-color: #fff;
 }
 .calendare-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .slider-btn {
 }
 .date {
 }
 .calendare-list {
+    margin-top: 36px;
 }
 .calendare-date {
 }
 .day {
 }
 .number {
+}
+.today-task {
+    background-color: #fff;
+    padding: 24px;
+    margin-top: 32px;
+}
+.today-task>*:not(:first-child) {
+    margin-top: 20px;
+}
+.today-header {
+    margin-bottom: 20px;
+}
+.more {
+    position: relative;
+}
+.more-iteam {
+    background: #141522;
+    border-radius: 100%;
+    width: 4px;
+    height: 4px;
+}
+.more-iteam::before {
+    position: absolute;
+    content: '';
+    background: #141522;
+    border-radius: 100%;
+    width: 4px;
+    height: 4px;
+    left: -7px;
+}
+.more-iteam::after {
+    position: absolute;
+    content: '';
+    background: #141522;
+    border-radius: 100%;
+    width: 4px;
+    height: 4px;
+    margin-left: 7px;
+}
+.task-time {
+    margin-top: 20px;
+    border-bottom: 1px solid #F5F5F7;
+    padding-bottom: 32px;
 }
