--- a/css/style.css
+++ b/css/style.css
@@ -414,6 +414,10 @@ a {
     border-radius: 10px;
     padding: 20px;
 }
+.task-card > img {
+    display: block;
+    margin: 0 auto;
+}
 .task-card>*:not(:first-child) {
     margin-top: 16px;
 }
@@ -664,5 +668,14 @@ a {
     }
     .task-card:not(:first-child) {
         margin-top: 32px;
+    }
+}
+@media (max-width:778px) {
+    ._wrapper {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    ._wrapper>* {
+        max-width: none;
     }
 }
